--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,16 +12,21 @@
     "@expo/webpack-config": "^18.0.4",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "expo": "~48.0.15",
     "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-gesture-handler": "^2.10.2",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.8.0",
-    "react-native-safe-area-context": "^4.5.3",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "^0.19.4"
+    "react-native-web": "~0.18.10",
+    "react-redux": "^8.1.0",
+    "@react-native-async-storage/async-storage": "1.17.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
