--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.4",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-navigation/material-bottom-tabs": "^6.2.16",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
@@ -25,8 +27,7 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
-    "react-redux": "^8.1.0",
-    "@react-native-async-storage/async-storage": "1.17.11"
+    "react-redux": "^8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
