--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,15 +13,19 @@
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/material-bottom-tabs": "^6.2.16",
     "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "expo": "~48.0.15",
+    "expo-image-picker": "^14.1.1",
     "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-image-slider-show": "^1.0.3",
+    "react-native-maps": "^1.7.1",
     "react-native-paper": "^5.8.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
