--- a/backend/config.env
+++ b/backend/config.env
@@ -1,4 +1,5 @@
-ATLAS_URI=mongodb+srv://conghd:zDpeautj6uSMxx0c@cluster0.c60rn5w.mongodb.net/urmarket?retryWrites=true&w=majority
+#ATLAS_URI=mongodb+srv://conghd:zDpeautj6uSMxx0c@cluster0.c60rn5w.mongodb.net/urmarket4?retryWrites=true&w=majority
+ATLAS_URI=mongodb+srv://conghd:zDpeautj6uSMxx0c@cluster0.c60rn5w.mongodb.net/urmarket2?retryWrites=true&w=majority
 #ATLAS_URI=mongodb+srv://<username>:<password>@sandbox.jadwj.mongodb.net/employees?retryWrites=true&w=majority
 PORT=5000
 JWT_SECRET = abc13579
