--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,7 +34,9 @@
     "react-native-web": "~0.18.10",
     "react-redux": "^8.1.0",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "expo-barcode-scanner": "~12.3.2",
+    "expo-router": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
