Integraing mailjet to send email.

--- a/backend/config.env
+++ b/backend/config.env
@@ -3,3 +3,5 @@ ATLAS_URI=mongodb+srv://conghd:zDpeautj6uSMxx0c@cluster0.c60rn5w.mongodb.net/urm
 #ATLAS_URI=mongodb+srv://<username>:<password>@sandbox.jadwj.mongodb.net/employees?retryWrites=true&w=majority
 PORT=5000
 JWT_SECRET = abc13579
+MAILJET_API_KEY=1f6dab035aa02a0ed87919d96d0a2313
+MAILJET_API_SECRET=5c06eb77c2fef62f31b27b37da44d9a4
