--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,8 @@
     "mongodb": "^4.6.0",
     "mongoose": "^6.3.5",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.4",
+    "nodemailer-smtp-transport": "^2.7.4",
     "realm": "^10.18.0",
     "swagger-ui-express": "^4.6.0",
     "uuidv4": "^6.2.13",
