--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.4",
@@ -18,9 +19,12 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "expo": "~48.0.15",
+    "expo-barcode-scanner": "~12.3.2",
     "expo-image-picker": "^14.1.1",
+    "expo-router": "^1.0.0",
     "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.4",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
@@ -34,12 +38,16 @@
     "react-native-web": "~0.18.10",
     "react-redux": "^8.1.0",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.2",
-    "expo-barcode-scanner": "~12.3.2",
-    "expo-router": "^1.0.0"
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "eslint": "^8.46.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-react": "^7.33.1",
+    "eslint-plugin-react-native": "^4.0.0",
+    "prettier": "3.0.1"
   },
   "private": true
 }
