--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -15,6 +15,7 @@
         "react"
     ],
     "rules": {
+        "react/display-name": "off",
         "no-console": "off",
         "react/prop-types": "off",
         "quotes": [
