--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@expo/react-native-action-sheet": "^4.0.1",
     "@expo/webpack-config": "^18.0.4",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/material-bottom-tabs": "^6.2.16",
@@ -31,6 +32,7 @@
     "react-native-image-slider-show": "^1.0.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^5.8.0",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
