--- a/backend/package.json
+++ b/backend/package.json
@@ -28,5 +28,8 @@
     "swagger-ui-express": "^4.6.0",
     "uuidv4": "^6.2.13",
     "winston": "^3.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
