--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "expo": "~48.0.15",
     "expo-barcode-scanner": "~12.3.2",
     "expo-image-picker": "^14.1.1",
+    "expo-location": "~15.1.1",
     "expo-router": "^1.0.0",
     "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.4",
@@ -40,7 +41,8 @@
     "react-native-web": "~0.18.10",
     "react-redux": "^8.1.0",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "react-native-maps": "1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
