--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,17 +32,18 @@
     "react-native-gesture-handler": "~2.9.0",
     "react-native-image-slider-show": "^1.0.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-maps": "1.3.2",
     "react-native-paper": "^5.8.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
     "react-redux": "^8.1.0",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.2",
-    "react-native-maps": "1.3.2"
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
