--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "nodemailer-smtp-transport": "^2.7.4",
     "realm": "^10.18.0",
     "sharp": "^0.32.4",
+    "socket.io": "^4.7.2",
     "swagger-ui-express": "^4.6.0",
     "uuidv4": "^6.2.13",
     "winston": "^3.10.0"
